--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
   }
 
   .h3 {
-    @apply text-[48px] font-semibold leading-[56px] tracking-[-0.02em];
+    @apply text-[48px] font-semibold leading-[56px] tracking-[-0.02em] max-lg:text-[32px]
   }
 
   .h4 {
@@ -61,7 +61,7 @@
   }
 
   .body-1 {
-    @apply text-[22px] leading-[36px];
+    @apply text-[22px] leading-[36px] max-lg:text-[18px];
   }
 
   .body-2 {
